/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements. See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership. The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License. You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied. See the License for the
 * specific language governing permissions and limitations
 * under the License.
 *
 */

syntax = "proto3";

option java_multiple_files = true;
package org.apache.custos.user.profile.service;


enum UserStatus {
    ACTIVE = 0;
    CONFIRMED = 1;
    APPROVED = 2;
    DELETED = 3;
    DUPLICATE = 4;
    GRACE_PERIOD = 5;
    INVITED = 6;
    DENIED = 7;
    PENDING = 8;
    PENDING_APPROVAL = 9;
    PENDING_CONFIRMATION = 10;
    SUSPENDED = 11;
    DECLINED = 12;
    EXPIRED = 13;
}


message UserProfile {
    string username = 1;
    string email = 2;
    string first_name = 3;
    string last_name = 4;
    string created_at = 5;
    UserStatus status = 6;
    repeated UserAttribute attributes = 7;
    repeated string client_roles = 8;
    repeated string realm_roles = 9;
}

message UserProfileRequest {
    int64 tenantId = 1;
    UserProfile profile = 2;
    string performedBy = 3;
}


message UserAttribute {
    int64 id = 1;
    string key = 2;
    repeated string value = 3;
}


message GetAllUserProfilesResponse {
    repeated UserProfile profiles = 1;
}

message GetUpdateAuditTrailRequest {
    int64 tenantId = 1;
    string username = 2;
}

message UserProfileAttributeUpdateMetadata {
    string updatedAttribute = 1;
    string updatedAttributeValue = 2;
    string updatedBy = 3;
    string updatedAt = 4;
}

message UserProfileStatusUpdateMetadata {
    UserStatus updatedStatus = 1;
    string updatedBy = 2;
    string updatedAt = 3;
}

message GetUpdateAuditTrailResponse {
    repeated UserProfileAttributeUpdateMetadata attributeAudit = 1;
    repeated UserProfileStatusUpdateMetadata statusAudit = 2;
}

message GroupRequest {
    int64 tenantId = 1;
    Group group = 2;
    string performedBy = 3;
}

message GetAllGroupsResponse {
    repeated Group groups = 1;
}
message Group {
    string id = 1;
    string name = 2;
    repeated string realm_roles = 3;
    repeated string client_roles = 4;
    string parent_id = 5;
    int64 created_time = 6;
    int64 last_modified_time = 7;
    repeated GroupAttribute attributes = 8;
}

message GroupAttribute {
    int64 id = 1;
    string key = 2;
    repeated string value = 3;
}

message GroupMembership{
    int64 tenantId = 1;
    string group_id = 2;
    string username = 3;
}

message Status {
    bool status = 1;
}


service UserProfileService {
    rpc createUserProfile (UserProfileRequest) returns (UserProfile);
    rpc updateUserProfile (UserProfileRequest) returns (UserProfile);
    rpc getUserProfile (UserProfileRequest) returns (UserProfile);
    rpc deleteUserProfile (UserProfileRequest) returns (UserProfile);
    rpc getAllUserProfilesInTenant (UserProfileRequest) returns (GetAllUserProfilesResponse);
    rpc findUserProfilesByAttributes (UserProfileRequest) returns (GetAllUserProfilesResponse);

    rpc createGroup (GroupRequest) returns (Group);
    rpc updateGroup (GroupRequest) returns (Group);
    rpc deleteGroup (GroupRequest) returns (Group);
    rpc getGroup (GroupRequest) returns (Group);
    rpc getAllGroups (GroupRequest) returns (GetAllGroupsResponse);


    rpc getUserProfileAuditTrails (GetUpdateAuditTrailRequest) returns (GetUpdateAuditTrailResponse);

    rpc addUserToGroup(GroupMembership) returns (Status);
    rpc removeUserFromGroup(GroupMembership) returns (Status);



}